collapse navbar fix

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,16 @@
-html {
-  position: relative;
-  min-height: 100%;
+html,
+body,
+#app,
+#app > div {
+  height: 100%;
+}
+
+#app {
+  width: 100%;
+  height: 100%;
+  font-family: monospace;
+  background-color: lightcyan;
+  margin-bottom: 40px;
 }
 
 #nav .navbar {
@@ -25,24 +35,15 @@ html {
 }
 
 button.navbar-toggler:focus {
-  outline: none !important;
-  box-shadow: none !important;
-}
-
-.site {
-  width: 100%;
-  height: 100%;
-  font-family: monospace;
-  background-color: white;
-  margin-bottom: 60px;
+  outline: none;
 }
 
 .footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 60px;
-  line-height: 60px;
+  height: 40px;
+  line-height: 40px;
   font-size: 12px;
   font-weight: lighter;
   color: gray;
